Fixed the positioning and height of the first image on the 'Emergency Numbers' page and reorganised the codes for each section of that page, so that they would not overflow the screen sizes.

--- a/style.css
+++ b/style.css
@@ -1129,7 +1129,7 @@ p {
 .office-phone-image-container {
     position: absolute;
     z-index: -10;
-    height: 50%;
+    height: 43%;
     margin-top: 50px;
     background-color: blue;
 }
@@ -1138,17 +1138,16 @@ p {
     height: 100%;
     z-index: -9;
     background-image: url('../assets/images/banner/office-phone.svg');
-    background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100% 100%;
 }
 
 .national-emergency-numbersBG {
     width: 100%;
     height: auto;
     background-color: white;
-    margin-top: 737px;
+    margin-top: 600px;
 }
 
 .national-emergency-numbers-Heading {
